[package]
name = "sqlite2dir"
description = "Dump sqlite3 databases to the filesystem"
categories = ["command-line-utilities", "database"]
keywords = ["sqlite", "database", "convert", "directory", "text"]
repository = "https://github.com/rotty/sqlite2dir"
homepage = "https://github.com/rotty/sqlite2dir"
readme = "README.md"
version = "0.1.0"
authors = ["Andreas Rottmann <a.rottmann@gmx.at>"]
license = "GPL-3.0-or-later"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rusqlite = "0.20.0"
structopt = { version = "0.3.1", default-features = false }
failure = "0.1.5"
serde_json = "1.0.40"
git2 = { version = "0.10.0", default-features = false }
once_cell = "1.1.0"

[features]
vendored-sqlite = ["rusqlite/bundled"]
